# sugi-plus

./: CMakeLists.txt  Makefile  README.md  TODO.md  sugi.conf
include/: config.hpp  sugi_config.hpp  sugi_engine.hpp  sugi_event_processor.hpp  sugi_window.hpp
src/: main.cpp  sugi_engine.cpp  sugi_event_processor.cpp  sugi_window.cpp
